feat: generate awesome-url style txt from url

--- a/src/ui/popup/components/url/Url.less
+++ b/src/ui/popup/components/url/Url.less
@@ -3,6 +3,10 @@
     text-overflow: ellipsis;
     overflow:hidden;
 }
+.btn {
+    margin-right:10px;
+    margin-bottom:10px;
+}
 .actionItem {
     margin-right:6px;
 }
