--- a/src/ui/newtab/components/Articles.less
+++ b/src/ui/newtab/components/Articles.less
@@ -1,6 +1,6 @@
 .contain {
     margin-bottom:40px;
-    max-height:300px;
+    // max-height:300px;
     overflow:scroll;
     text-align: left;
 }
